objects/CommandCenter__ScheduledJob_UsrSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CommandCenter__Defect_Pattern__c</fullName>
        <label>Defect_Pattern</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Include_PMO_ToolKit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include PMO ToolKit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Last_Commit_DateTime__c</fullName>
        <label>Last Commit DateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__UserConfigId__c</fullName>
        <label>UserConfigId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__UserStory_Pattern__c</fullName>
        <label>UserStory Pattern</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>LinkComponentConfig</label>
</CustomObject>